# solana-token-scraper

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.sh  diesel.toml
.github/workflows/: ci.yml
raydium-amm-interface/: Cargo.toml
raydium-amm-interface/src/: accounts.rs  instructions.rs
token-scraper-core/: Cargo.toml
token-scraper-core/migrations/2024-07-28-090020_create_tokens/: up.sql
token-scraper-core/src/: macros.rs  main.rs  message_handler.rs  photon_util.rs  settings.rs  util.rs
token-scraper-core/src/database/: mod.rs  models.rs  schema.rs
token-scraper-core/src/discord/: mod.rs
token-scraper-core/src/discord/stream/: handler.rs  identify.rs  mod.rs  util.rs  ws_request.rs
