[workspace]
members = ["raydium-amm-interface", "token-scraper-core"]
resolver = "2"

[workspace.dependencies]
assert_fs = "1.1.2"
bincode = "1.3.3"
borsh = "1.5.1"
config = "0.14.0"
console = "0.15.8"
csv = "1.3.0"
futures-util = "0.3.30"
http = "1.1.0"
indicatif = "0.17.8"
num-derive = "0.4.2"
num-traits = "0.2.19"
regex = "1.10.6"
reqwest = "0.12.7"
serde = "1.0.210"
serde_json = "1.0.128"
solana-client = "2.0.10"
solana-program = "2.0.10"
solana-sdk = "2.0.10"
thiserror = "1.0.64"
tokio = "1.40.0"
tokio-tungstenite = "0.24.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
twilight-model = "0.15.4"
raydium-amm-interface = { path = "./raydium-amm-interface" }

[patch.crates-io]
# aes-gcm-siv 0.10.3 and curve25519-dalek 3.x pin zeroize to <1.4
# which conflicts with other dependencies requiring zeroize ^1.5.
# We’re patching both crates to unpin zeroize.
#
# For aes-gcm-siv we’re using the same revision Solana uses in
# an (as of now) unreleased commit, see
# https://github.com/solana-labs/solana/commit/01f1bf27994d9813fadfcd134befd3a449aaa0bd
#
# For curve25519-dalek we’re using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
# aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
