[package]
name = "raydium-amm-interface"
version = "0.3.0"
edition = "2021"

[dependencies.borsh]
workspace = true

[dependencies.num-derive]
workspace = true

[dependencies.num-traits]
workspace = true

[dependencies.serde]
optional = true
workspace = true

[dependencies.solana-program]
workspace = true

[dependencies.thiserror]
workspace = true
