[package]
name = "token-scraper-core"
version = "0.1.0"
authors = ["Lezend"]
description = "CLI tool to scrape solana tokens."
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
config = { workspace = true }
console = { workspace = true }
csv = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
http = { workspace = true }
indicatif = { workspace = true }
raydium-amm-interface = { workspace = true, features = ["serde"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
twilight-model = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
